--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "element-ui": "^2.4.8",
     "firebase": "^5.5.5",
+    "firebaseui": "^3.4.1",
     "nuxt": "^2.2.0"
   },
   "version": "1.0.0",
